--- a/source/styles.css
+++ b/source/styles.css
@@ -1,14 +1,12 @@
-/* The body is everything displayed in the main text delivery area
-body {
-	background: blue;
-}
-*/
 
-/* This class is specific to the text in the passages
-.passage {
-    border: 1px solid red;
+body {
+	background: black;
 }
-*/
+
+.passage {
+	font-family: 'Bungee', cursive;
+	font-size: 20px;
+}
 
 /* This id is specific to the sidebar
 #ui-bar {
@@ -33,3 +31,7 @@ body {
 	background: green;
 }
 */
+
+.title {
+	margin: auto;
+}
